<resources>
    <string name="app_name">SharedPreferenceAndFileDemo</string>
    <string name="welcome_hin">Please input:</string>
    <string name="welcome_login_hin">Please input:</string>
    <string name="username_hin">User name</string>
    <string name="password_hin">Password</string>
    <string name="firstname_hin">First name</string>
    <string name="lastname_hin">Last name</string>
    <string name="mobile_hin">Phone number</string>
    <string name="email_hin">Email</string>
    <string name="submit_label">LOGIN</string>
    <string name="save_label">SAVE</string>
</resources>
